src/test/deca/syntax/valid/cast_bool_2.deca
// Description :
// Cast explicite boolean 
// Devrait marcher pour l'étape syntaxique
//
// Resultats :
// ok

{
    int a;
    a = (boolean)(1);
}