src/test/deca/syntax/invalid/incomplete_if.deca
// Description :
//    if incomplete
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'if'

if (true) {
    int a = 5;
